tests/errors/raw_ptr/assign_of_wrong_pointee_type_errors.sim

        fn f(x: i32) {
          p: *i64;
          entry:
            p = &raw x;
            return
        }
        